[package]
name = "pastebin_rust_api"
version = "0.5.13"
authors = ["DerUberCatman <b.wisman155@gmail.com>"]
exclude = ["tools"]
publish = true
repository = "https://github.com/TheUberCatman/pastebin_rust_api"
description = "Library for posting content to pastebin.com"
license = "Apache-2.0"

[dependencies]
reqwest = "0.5.2"
treexml = "0.3.0"
